--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
-        "twig/twig": "~1.16",
+        "symfony/config": "~2.3|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.3|~3.0|~4.0",
+        "symfony/filesystem": "~2.3|~3.0|~4.0",
+        "symfony/yaml": "~2.3|~3.0|~4.0",
+        "twig/twig": "~1.16|2.12|^3.0",
         "jakoch/phantomjs-installer": "2.1.1-p08"
     },
     "require-dev": {
